fix: add smart DataSourceConfig for Cloud PostgreSQL URL normalization and dynamic CORS